--- a/packages/mgt-components/src/components/mgt-login/mgt-login.theme.scss
+++ b/packages/mgt-components/src/components/mgt-login/mgt-login.theme.scss
@@ -14,6 +14,10 @@ $button__background-color--hover: var(
 );
 $popup__background-color: var(--popup-background-color, set-var(background-color, $theme-default, $common));
 $popup__add-account-button-color: var(--add-account-button-color, set-var(color__sub2, $theme-default, $common));
+$popup__button-color--hover: var(
+  --popup-button-color--hover,
+  var(--neutral-fill-stealth-hover, #{$neutralFillStealthHover})
+);
 
 $login: (
   button__color: (
